tests/golden/defaults/openshift4-logging/openshift4-logging/50_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-from-openshift-operators-redhat
  name: allow-from-openshift-operators-redhat
  namespace: openshift-logging
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: openshift-operators-redhat
        - podSelector:
            matchLabels:
              name: elasticsearch-operator
  podSelector: {}
  policyTypes:
    - Ingress
